--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
     "bootstrap": "3.4.1",
+    "bootstrap-icons": "^1.4.0",
     "jquery": "3.5.1",
     "turbolinks": "^5.2.0"
   },
